refactor: rename TraversingHeapModes to ObjectGCStatus
